--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 -->
 <html lang="en"> <head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1"> <title>Interactive Schedule for Festival of Digital Health</title> <meta name="description" content="LEAP Festival of Digital Health (30 June–4 July 2025) will be a dynamic week of events, showcasing how digital technologies are transforming the way we think about, deliver, and experience health and care."> <style>.schedule_type_bristol {
 
-background: #ee7219; } .schedule_type_cardiff {
+background: #a63349; } .schedule_type_cardiff {
 background: #0cc6de; } .schedule_type_exeter {
 background: #a3b703; } .schedule_type_bath {
 background: #e0249a; } body {
