--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 -->
 <html lang="en"> <head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1"> <title>Interactive Schedule for Festival of Digital Health</title> <meta name="description" content="LEAP Festival of Digital Health (30 June–4 July 2025) will be a dynamic week of events, showcasing how digital technologies are transforming the way we think about, deliver, and experience health and care."> <style>.schedule_type_bristol {
 
-background: #a63349; } .schedule_type_cardiff {
-background: #0cc6de; } .schedule_type_exeter {
-background: #a3b703; } .schedule_type_bath {
-background: #e0249a; } body {
-font-family: Arial, Helvetica, sans-serif; background: #a63349; color: #fff; cursor: grab; } @media print {
+background: #e29fac; } .schedule_type_cardiff {
+background: #f9d58a; } .schedule_type_exeter {
+background: #cd586e; } .schedule_type_bath {
+background: #9892ad; } body {
+font-family: Arial, Helvetica, sans-serif; background: #e4f4f9; color: #252525; cursor: grab; } @media print {
 body {
 background: #fff; color: #000; } } body.grabbing {
 cursor: grabbing !important; user-select: none; } body.grabbing a {
