--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ background: #fff; color: #000; } } body.grabbing {
 cursor: grabbing !important; user-select: none; } body.grabbing a {
 cursor: grabbing; } h1 {
 position: fixed; top: 1rem; left: 0.5rem; width: 25rem; margin: 0; z-index: -1; } h1 a {
-color: #fff; text-decoration: none; } #schedule {
+color: #252525; text-decoration: none; } #schedule {
 position: absolute; top: 4rem; right: 0.5rem; bottom: 0.5rem; left: 0.5rem; font-size: 0.8rem; } @media screen and (max-width: 575px) {
 #schedule {
 top: 7rem; } } #schedule > div {
@@ -63,8 +63,8 @@ z-index: 1; background: #fff; opacity: 0.4; border-radius: 0.25rem; } #schedule 
 outline: 5px solid #ff5400; } #schedule .schedule_event .schedule_type, #schedule .schedule_event .schedule_location {
 font-size: 0.9em; font-weight: bold; display: inline-block; padding: 0.2rem 0.3rem; border-radius: 0.25rem; margin: 0.2rem 0.2rem 0.2rem 0; text-transform: uppercase; } #schedule .schedule_event .schedule_type {
 background: #0003; } #schedule .schedule_event .schedule_location_in-person {
-color: #fff; background: #e4f4f9; } #schedule .schedule_event .schedule_location_online {
-color: #e4f4f9; background: #fff; } #schedule .schedule_event time {
+color: #252525; background: #e4f4f9; } #schedule .schedule_event .schedule_location_online {
+color: #e4f4f9; background: #252525; } #schedule .schedule_event time {
 display: block; } #schedule .schedule_heading {
 grid-row: headings; grid-column: 1 / -1; background: #e4f4f9; margin: 0 0 0.25rem; display: flex; align-items: center; justify-content: center; position: sticky; top: 0; z-index: 2; } @media screen and (max-width: 1000px) {
 #schedule .schedule_heading {
@@ -82,7 +82,7 @@ background: #fff; } } #schedule .schedule_times div {
 grid-row: 1; position: sticky; top: 0; z-index: 2; background: #e4f4f9; margin-bottom: 0.25rem; } @media print {
 #schedule .schedule_times div {
 background: #fff; } } #schedule .schedule_times time {
-grid-row: span 4; padding: 0.5rem; text-align: center; color: #ffe699; font-size: 0.9rem; } #schedule .schedule_times time:last-child {
+grid-row: span 4; padding: 0.5rem; text-align: center; color: #252525; font-size: 0.9rem; } #schedule .schedule_times time:last-child {
 border-bottom: none; } @media print {
 #schedule .schedule_times time {
 color: #000; } } #schedule div.schedule_times {
